T1 - logo alignment fixed

--- a/public/assets/css/cubic-bezier.css
+++ b/public/assets/css/cubic-bezier.css
@@ -334,7 +334,6 @@ img.t-logo {
     cursor: pointer;
     left: 4%;
     position: relative;
-    top: 10%;
     z-index: 101;
 }
 #cubic-bezier-play {
